<resources>
    <string name="app_name">Afikomen</string>
    <string name="find_the_afikomen">Find the Afikomen</string>
    <string name="haggadah">Haggadah</string>
    <string name="reset">Play Again</string>
    <string name="matzah">Afikomen</string>
    <string name="afikomen_found">Mazel Tov! You found the Afikomen! We can now have the Sponge Cake!</string>
    <string name="adId">ca-app-pub-6875642631888242~5871702534</string>
    <string name="adUnitId">ca-app-pub-6875642631888242/9427804165</string>
    <string name="testAdUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="gameTime">You took %.1f seconds!</string>
</resources>
